Minor adjustments: fix some warnings